@@ -1,3 +1,6 @@
+v2016-07-29
+  * Modify build scripts
+
 v2016-07-26
   * Modify page "About"
   * Modify post "GTK事件及信号机制"
